WEBページを作成しました

--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-<font size="40pt">
-最初のウェブページ。
-</font>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <script>
+
+        </script>
+        <link rel="stylesheet" href="style.css">
+     </head>
+     <body>
+         <header>
+            <h1>このページは松永汐未のポートフォリオ</h1>
+         </header>
+        <section>
+            <o1>
+                <1i>WEbデザイン１ </1i>
+                <1i>B検１</1i>
+　　　　　　 </o1>
+　　　　</section>
+     </body>
+</html>
